# spotfire-community

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yaml  publish.yaml
.posting/: config.yaml
crates/sbdf-lib/: Cargo.toml  README.md  VENDORED.md
crates/sbdf-lib/src/: lib.rs  reader.rs  writer.rs
crates/sbdf-py/: Cargo.toml
crates/sbdf-py/src/: lib.rs
crates/tabular-to-sbdf/: Cargo.toml
crates/tabular-to-sbdf/src/: main.rs
src/mock_spotfire/: app.py
src/mock_spotfire/_core/: __init__.py  models.py  paths.py  router.py  uuid.py
src/mock_spotfire/automation_services_v1/: __init__.py  errors.py  models.py  paths.py  state.py
src/mock_spotfire/automation_services_v1/routes/: __init__.py  abort.py  start_library.py  start_xml.py  status.py  test_hooks.py
src/mock_spotfire/library_v2/: __init__.py  errors.py  models.py  paths.py  state.py
src/mock_spotfire/library_v2/routes/: __init__.py  items.py  upload.py
src/spotfire_community/: __init__.py  _sbdf.pyi
src/spotfire_community/_core/: __init__.py
src/spotfire_community/_core/rest/: __init__.py  auth.py  models.py  spotfire_requests.py
src/spotfire_community/_core/validation/: __init__.py  uuid.py
src/spotfire_community/automation_services/: __init__.py  client.py  errors.py  models.py
src/spotfire_community/automation_services/_xml/: __init__.py  job_definition.py
src/spotfire_community/automation_services/_xml/tasks/: __init__.py  apply_bookmark.py  models.py  open_analysis.py  task.py
src/spotfire_community/dxp/: __init__.py  dxp.py  errors.py  models.py  serializer.py
src/spotfire_community/dxp/_xml/: data_access_plan.py  data_connection.py
src/spotfire_community/sbdf/: __init__.py  _writer.py
tests/: conftest.py
tests/api/: test_auth.py
tests/api/automation_services/job_definitions/: test_automation_services_job_definition_behavior.py
tests/api/automation_services/jobs/: test_automation_services_job_cancel.py  test_automation_services_job_definition_start.py  test_automation_services_job_library_start.py  test_automation_services_job_start_and_wait.py  test_automation_services_job_status.py  test_automation_services_library_job_start_and_wait.py
tests/unit/core/: test_authenticate.py  test_spotfire_requests_session.py
tests/unit/dxp/: test_dxp.py  test_serializer.py  test_xml_models.py
tests/unit/sbdf/: test_sbdf.py  test_streaming_writer.py
