[project]
name = "spotfire-community"
version = "0.5.0"
description = "Spotfire Community tools for working with the Spotfire Library API and DXP files."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.32.5",
]
keywords = ["spotfire", "dxp", "rest", "library", "tibco"]
authors = [{ name = "Clay Rankin", email = "clay@wiserocksoftware.com" }]

[project.urls]
Repository = "https://github.com/scrankin/spotfire-community"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
python-packages = ["spotfire_community"]
module-name = "spotfire_community._sbdf"
manifest-path = "crates/sbdf-py/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "fastapi>=0.112.2",
    "uvicorn>=0.30.6",
    "httpx>=0.28.1",
    "pytest-cov>=6.2.1",
    "maturin>=1.0,<2.0",
]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]

venvPath = "."
venv = ".venv"

pythonVersion = "3.13"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
]
