[package]
name = "sbdf"
version = "0.2.1"
description = "Unofficial reader/writer for the Spotfire Binary Data Format (sbdf)"
authors = ["Joshua Groves <josh@joshgroves.com>"]
repository = "https://github.com/pod2co/sbdf"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.41", features = ["ron"] }
